--- a/ref.bib
+++ b/ref.bib
@@ -47,3 +47,8 @@ author={Rondeau, Tom},
 year={2012},
 howpublished = "\url{http://www.trondeau.com/blog/2012/2/17/volk-benchmarking.html}",
 }
+
+@misc{dvbt,
+title = {Viterbi decoder implementation for GNU Radio DVB-T},
+howpublished = "\url{http://yo3iiu.ro/blog/?p=1393}",
+}
