Added kernels list, finer timeline, revisionsw

--- a/ref.bib
+++ b/ref.bib
@@ -3,6 +3,21 @@ title = {{GNU Radio}},
 howpublished = "\url{http://gnuradio.org}",
 }
 
+@misc{volk-stats,
+title = {{Volk Kernel Benchmarks}},
+howpublished = "\url{http://stats.gnuradio.org/}",
+}
+
+@misc{802.11,
+title = {{IEEE 802.11 standard for wireless LANs}},
+howpublished = "\url{http://standards.ieee.org/about/get/802/802.11.html}",
+}
+
+@misc{lte,
+title = {{LTE standard for wireless communication}},
+howpublished = "\url{http://www.3gpp.org/technologies/keywords-acronyms/98-lte}",
+}
+
 @misc{oprofile,
 title = {OProfile, a system-wide profiler for Linux Systems},
 howpublished = "\url{http://oprofile.sourceforge.net/about}",
