--- a/gsoc-proposal.tex
+++ b/gsoc-proposal.tex
@@ -6,11 +6,13 @@
 \usepackage{graphicx}
 \usepackage{graphics}
 \usepackage{url}
+\usepackage{array}
+\usepackage{float}
 \usepackage[top=1in,bottom=1in,left=1.25in,right=1.25in]{geometry}
 \bibliographystyle{ieeetr}
 \title{Google Summer of Code 2014 : Performance Optimization with VOLK}
 \date{\today}
-\author{Abhishek Bhowmick\\ abhowmick22@gmail.com\\ \\Potential Mentor : Nathan West}
+\author{Abhishek Bhowmick\\ abhowmick22@gmail.com\\ \\Potential Mentors : Nathan West, Florian Kaltenberger}
 
 
 \begin{document}
@@ -22,13 +24,38 @@ GNU Radio \cite{gnuradio} is a software development toolkit that can be used to 
 
 \section{Proposal}
 
-The objectives of the project are to enhance the functionality of the VOLK library with complex kernels and advanced ISA support. First, AVX/AVX2 implementations will be developed for the current VOLK kernels, and turbo encoder/decoder blocks from OpenAirInterfaces \cite{openair} will be ported to VOLK. Next, new kernels will be developed to accelerate blocks such as the in-tree receiver OFDM implementation, ATSC 2.x, DVB-T. These new kernels will be identified based on profiling studies, to accelerate performance bottlenecks. Also, vectorized support will be developed for transcendental functions such as exp, log10, atan2f etc.
+The objectives of the project are to enhance the functionality of the VOLK library with complex kernels and advanced ISA support. First, AVX/AVX2 implementations will be developed for the current VOLK kernels, and turbo encoder/decoder blocks from OpenAirInterfaces \cite{openair} will be ported to VOLK. Next, new kernels will be developed to accelerate blocks such as the in-tree receiver OFDM implementation, ATSC 2.x, DVB-T. These new kernels will be identified based on profiling studies, to accelerate performance bottlenecks. Also, vectorized support will be developed for transcendental functions such as exp, log10, atan2f.
 
 \section{SIMD extensions}
 
 AVX expands SSE instructions to 256 bit and also includes 3-operand fused multiply and accumulate instructions (FMA). These can be used to speed up operations like dot products, matrix operations, convolution etc. Its extension on Haswell chips, namely AVX2, include newer features like 3-operand general purpose bit manipulation, gather loads and integer vectors. These new features alongwith wider registers can be used with good benefits. 
 
-\section{Preliminary Profiling}
+\section{OpenAirinterfaces and Existing Kernels}
+
+\subsection{Porting code from OpenAirInterfaces}
+\label{sec:openair}
+OpenAirInterfaces~\cite{openair} already has SIMD optimized (SSE4) Turbo encoder/decoder and Viterbi encoder/decoder blocks for LTE~\cite{lte} and 802.11~\cite{802.11} standards. The objective is to write generic, aligned and unaligned VOLK wrappers for these blocks, followed by an upgrade to AVX2. The code is licensed under GPLv2 and hence can be ported to GNU Radio. The source code for these blocks may be viewed under \url{https://svn.eurecom.fr/openair4G/trunk/openair1/PHY/CODING}. The relevant vectorized codes are 3gpplte\_sse.c (LTE Turbo encoder), 3gpp\_lte\_turbo\_decoder\_sse.c (LTE turbo decoder), viterbi.c (802.11 Viterbi decoder) and viterbi\_lte.c (LTE Viterbi decoder).
+
+\subsection{Old kernels}
+\label{sec:old-kernels}
+Based on the usage of VOLK kernels in various GNU Radio blocks~\cite{volk-stats} and particularly in applications like digital TV (ATSC, DVB-T), OFDM etc, the following kernels were identified for upgrading to AVX(2).
+
+\begin{table}[h]
+\centering
+\begin{tabular}{ >{\itshape}p{7.7cm} | >{\itshape}p{6.3cm} }
+\hline 
+\textnormal{\bfseries Will do} & \textnormal{\bfseries Will do given time} \\ \hline \hline
+volk\_32fc\_32f\_dot\_prod\_32fc, volk\_32f\_x2\_dot\_prod\_32f ... & volk\_32f\_convert\_64f, volk\_8i\_s32f\_convert\_32f ... \\ \hline 
+volk\_32fc\_x2\_multiply\_32fc, volk\_32f\_x2\_multiply\_32f ... & volk\_32fc\_deinterleave\_64f\_x2, volk\_32fc\_deinterleave\_imag\_32f ... \\ \hline
+volk\_32fc\_conjugate\_32fc & volk\_32fc\_magnitude\_squared\_32f \\ \hline
+volk\_32fc\_x2\_multiply\_conjugate\_32fc & volk\_32fc\_s32fc\_x2\_rotator\_32fc \\ \hline
+volk\_32fc\_s32f\_x2\_power\_spectral\_density\_32f \\ \hline
+\end{tabular}
+\caption{Classes of volk kernels identified for updating}
+\label{tab:table1}
+\end{table}
+
+\section{Preliminary Profiling and New Kernels}
 \label{sec:profiling}
 Some preliminary profiling was done for the example OFDM implementation to identify performance bottlenecks. Figure~\ref{fig:1} identifies the most computationally intense blocks in OFDM Rx through a Control Flow Graph. 
 
@@ -37,19 +64,20 @@ Some preliminary profiling was done for the example OFDM implementation to ident
 \caption{Percentage runtime of different blocks in OFDM RX example \label{fig:1} }
 \end{figure}
 
-Oprofile \cite{oprofile} was used to further identify the C++ routines within these blocks that were processor heavy. For instance, the {\it fir\_filter\_ccf} and {\it fir\_filter\_ccc} blocks spent a lot of time in their respective filter() methods, that were already seen to have some vectorization with the {\it volk\_32fc\_32f/x2\_dot\_prod\_32fc\_a} kernels. AVX2 support and better vectorization can be used to target these regions. Similarly, the {\it work()} methods of {\it fractional\_resampler\_cc}, {\it additive\_scrambler\_bb} and {\it ofdm\_frame\_equalizer\_bb} are good candidates for vectorization. Also, profiling was carried out for the {\it qa\_atsc} test in gr-atsc module, which revealed that Viterbi decoder, Trellis encoder, convolutional interleaver/deinterleaver were most CPU-hungry operations.
+Oprofile \cite{oprofile} was used to further identify the C++ routines within these blocks that were processor heavy. For instance, the {\it fir\_filter\_ccf} and {\it fir\_filter\_ccc} blocks spent a lot of time in their respective filter() methods, that were already seen to have some vectorization with the {\it volk\_32fc\_32f/x2\_dot\_prod\_32fc\_a} kernels. AVX2 support and better vectorization can be used to target these regions. Similarly, the {\it work()} methods of {\it fractional\_resampler\_cc}, {\it additive\_scrambler\_bb} and {\it ofdm\_frame\_equalizer\_bb} are good candidates for vectorization. Also, profiling was carried out for the {\it qa\_atsc} test in gr-atsc module, which revealed that Viterbi decoder/encoder, convolutional interleaver/deinterleaver were most CPU-hungry operations.
 
-\section{New Kernels}
+\subsection{New Kernels}
 
 Based on the profiling and initial discussions with GNU Radio community, following algorithms were identified for implementation as potential VOLK kernels:
 
 \begin{itemize}
 \item \textbf{OFDM Frame detection}: Current timing and frequency synchronization is done using Schmidl-Cox algorithm \cite{schmidl-cox}. The pre-FFT timing acquisition and fine frequency offset correction will be developed into a single kernel.
 \item \textbf{OFDM Equalizer}: This kernel will incorporate channel estimation based on pilot symbols and DFE equalization.
-\item \textbf{Viterbi Decoder, Trellis Encoder} : These were the most intensive blocks in atsc loopback test. Viterbi decoder was also shown to be the most cycle hungry block in out-of-tree DVB-T implementation by Bogdan Diaconescu \cite{dvbt}. 
-\item \textbf{Convolutional interleaver/deinterleaver}: Data interleaving and deinterleaving were also seen to be computationally hungry in the profiling of atsc. 
+\item \textbf{Viterbi Decoder, Trellis Encoder} : These were the among the most intensive blocks in ATSC loopback test. Viterbi decoder was also shown to be the most cycle hungry block in out-of-tree DVB-T implementation by Bogdan Diaconescu \cite{dvbt}. We can potentially adapt the Viterbi encoder/decoder from OpenAirInterfaces into VOLK kernels for usage in ATSC, DVB-T.
 \item \textbf{Transcendental functions}: Operations like log, atan2, exp etc.
+\item \textbf{Convolutional interleaver/deinterleaver}: Data interleaving and deinterleaving were also seen to be computationally hungry in the profiling of ATSC. This will be attempted if time permits. 
 \end{itemize}
+
 
 %\section{OFDM Receiver}
 %Orthogonal Frequency Division Multiplexing is a method for encoding digital data on multiple carrier frequencies that are orthogonal to each other. In an OFDM receiver, the signals received from channel are down-converted, filtered, sampled and digitised. An FFT block converts these samples back into the frequency domain. The parallel streams from the FFT are then decoded into symbols using symbol detectors and serialized to get back the original data stream. \\
@@ -66,33 +94,49 @@ Based on the profiling and initial discussions with GNU Radio community, followi
 
 \section{Deliverables}
 The following is a list of the deliverables which may be subject to change following discussions with mentors. 
-
 \begin{itemize}
-\item Deliverable 0: Provide AVX and AVX2 support for existing VOLK kernels.
-\item Deliverable 1: Port Turbo and Viterbi encoder/decoder from OpenAirInterfaces to VOLK and upgrade it to AVX2.
-\item Deliverable 2: Vectorize functions like exp, log10, atan2f.
-\item Deliverable 3: New VOLK kernels like OFDM frame detection, equalizer, Viterbi decoder, Trellis encoder, interleaver/de-interleaver.
-\item Deliverable 4: Any new kernels as may be suitably identified by profiling.
-%\item Deliverable 5: MMSE-DFE equalizer for OFDM.
+\item Deliverable 1: Provide AVX and AVX2 support for existing VOLK kernels as outlined in Section~\ref{sec:old-kernels}.
+\item Deliverable 2: Port Turbo and Viterbi encoder/decoder for LTE/802.11 from OpenAirInterfaces to VOLK and upgrade them to AVX2.
+\item Deliverable 3: Develop new VOLK kernels for OFDM frame detection, OFDM equalizer, Viterbi encoder/decoder, data interleaver/deinterleaver (if time permits).
+\item Deliverable 4: Vectorize functions like exp, log10, atan2f.
 \end{itemize}
 
 \section{Hardware required}
 
-A core Haswell processor from Intel will be required for developing AVX2 and FMA kernels, which I may potentially buy if selected. Also, a USRP board might be needed for testing real-time capabilities of applications like ATSC and DVB-T. 
+A core Haswell processor from Intel will be required for developing kernels with AVX2 support. Also, a USRP board might be needed for testing real-time capabilities of applications like ATSC and DVB-T. 
 
 \section{Schedule/Availability}
 A tentative schedule for the project is as follows: 
-\begin{itemize}
-\item \textbf{Pre GSoC phase}: Get familiar with AVX/AVX2, programming with SIMD intrinsics.   
-\item \textbf{19 May - 23 May}: Examine the source code, detailed profiling studies.
-\item \textbf{26 May - 30 May}: Upgrade existing VOLK kernels to AVX/AVX2.
-\item \textbf{2 June - 6 June}: Port OpenAirInterfaces code to VOLK.
-\item \textbf{9 June - 20 June}: Write kernels for transcendental functions.
-\item \textbf{23 June - 27 June}: Mid-term evaluations, tie loose ends.
-\item \textbf{30 June - 11 July}: Code OFDM frame detection and equalizer kernels.
-\item \textbf{14 July - 1 August}: Code kernels for Viterbi encoder/decoder, convolutional interleaving/deinterleaving and other new operations.
-\item \textbf{4 August - 15 August}: Write tests, bug fixes, clean code, add documentation.
-\end{itemize}
+%\begin{itemize}
+%\item \textbf{Pre GSoC phase}: Get familiar with AVX/AVX2, programming with SIMD intrinsics, error correcting codes.   
+%\item \textbf{19 May - 23 May} (1 week): Examine the source code, detailed profiling studies, discussions with mentor on design of new kernels.
+%\item \textbf{26 May - 6 June} (2 weeks): Upgrade VOLK kernels from Section~\ref{sec:old-kernels} to AVX/AVX2. 
+%\item \textbf{9 June - 20 June} (2 weeks): Code OFDM Frame detection kernel.
+%\item \textbf{23 June - 27 June} (1 week): Mid-term evaluations, add documentation, testing, benchmarking.
+%\item \textbf{30 June - 11 July} (2 weeks): Port OpenAirInterfaces blocks to VOLK and upgrade to AVX2.
+%\item \textbf{14 July - 18 July} (1 week): Functional tests, benchmarking, documentation.
+%\item \textbf{21 July - 1 Aug} (2 weeks): Code OFDM frame equalizer kernel. 
+%\item \textbf{4 Aug - 8 Aug} (1 week): Vectorize exp, log, trig functions.
+%\item \textbf{11 Aug - 15 Aug} (1 week): Write tests, bug fixes, clean code, add documentation.
+%\end{itemize}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{>{\bfseries}p{3.8cm} p{10.2cm}}
+\hline
+Pre GSoC phase & Get familiar with AVX/AVX2, programming with SIMD intrinsics, brush up channel coding techniques. \\ 
+19 May - 23 May \par \textnormal{(1 week)} & Detailed profiling studies, discussions with mentor on design of new kernels. \\
+26 May - 6 June \par \textnormal{(2 weeks)} & Upgrade VOLK kernels from Section~\ref{sec:old-kernels} to AVX/AVX2. \\
+9 June - 20 June \par \textnormal{(2 weeks)} & Code OFDM Frame detection kernel. \\ 
+23 June - 27 June \par \textnormal{(1 week)} & Mid-term evaluations, add documentation, testing, benchmarking. \\ 
+30 June - 11 July \par \textnormal{(2 weeks)} & Port OpenAirInterfaces blocks to VOLK and upgrade to AVX2. \\ 
+14 July - 18 July \par \textnormal{(1 week)} & Functional tests, benchmarking, documentation. \\ 
+21 July - 1 Aug \par \textnormal{(2 weeks)} & Code OFDM frame equalizer kernel. \\ 
+4 Aug - 8 Aug \par \textnormal{(1 week)} & Vectorize exp, log, trig functions. \\ 
+11 Aug - 15 Aug \par \textnormal{(1 week)} & Write tests, bug fixes, clean code, add documentation. \\ 
+\hline
+\end{tabular}
+\end{table}
 
 My availability is as follows:
 
