--- a/gsoc-proposal.tex
+++ b/gsoc-proposal.tex
@@ -34,7 +34,7 @@ AVX expands SSE instructions to 256 bit and also includes 3-operand fused multip
 
 \subsection{Porting code from OpenAirInterfaces}
 \label{sec:openair}
-OpenAirInterfaces~\cite{openair} already has SIMD optimized (SSE4) Turbo encoder/decoder and Viterbi encoder/decoder blocks for LTE~\cite{lte} and 802.11~\cite{802.11} standards. The objective is to write generic, aligned and unaligned VOLK wrappers for these blocks, followed by an upgrade to AVX2. The code is licensed under GPLv2 and hence can be ported to GNU Radio. The source code for these blocks may be viewed under \url{https://svn.eurecom.fr/openair4G/trunk/openair1/PHY/CODING}. The relevant vectorized codes are 3gpplte\_sse.c (LTE Turbo encoder), 3gpp\_lte\_turbo\_decoder\_sse.c (LTE turbo decoder), viterbi.c (802.11 Viterbi decoder) and viterbi\_lte.c (LTE Viterbi decoder).
+OpenAirInterfaces~\cite{openair} already has SIMD optimized (SSE4) Turbo encoder/decoder and Viterbi encoder/decoder blocks for LTE~\cite{lte} and IEEE 802.11~\cite{802.11} standards. The objective is to write generic, aligned and unaligned VOLK wrappers for these blocks, followed by an upgrade to AVX2. The code is licensed under GPLv2 and hence can be ported to GNU Radio. The source code for these blocks may be viewed under \url{https://svn.eurecom.fr/openair4G/trunk/openair1/PHY/CODING}. The relevant vectorized codes are 3gpplte\_sse.c (LTE Turbo encoder), 3gpp\_lte\_turbo\_decoder\_sse.c (LTE turbo decoder), viterbi.c (802.11 Viterbi decoder) and viterbi\_lte.c (LTE Viterbi decoder).
 
 \subsection{Old kernels}
 \label{sec:old-kernels}
@@ -76,8 +76,8 @@ Based on the profiling and initial discussions with GNU Radio community, followi
 \item \textbf{Viterbi Decoder, Trellis Encoder} : These were the among the most intensive blocks in ATSC loopback test. Viterbi decoder was also shown to be the most cycle hungry block in out-of-tree DVB-T implementation by Bogdan Diaconescu \cite{dvbt}. We can potentially adapt the Viterbi encoder/decoder from OpenAirInterfaces into VOLK kernels for usage in ATSC, DVB-T.
 \item \textbf{Transcendental functions}: Operations like log, atan2, exp etc.
 \item \textbf{Convolutional interleaver/deinterleaver}: Data interleaving and deinterleaving were also seen to be computationally hungry in the profiling of ATSC. This will be attempted if time permits. 
+\item \textbf{Miscellaneous}: Detailed profiling similar to Section~\ref{sec:profiling} is bound to reveal performance bottlenecks that can be addressed with new kernels. Some operations that were already identified include fractional resampler, fir filter, additive scrambler etc. Identifying and accelerating such operations will be attempted following detailed discussions with mentors and if time permits.
 \end{itemize}
-
 
 %\section{OFDM Receiver}
 %Orthogonal Frequency Division Multiplexing is a method for encoding digital data on multiple carrier frequencies that are orthogonal to each other. In an OFDM receiver, the signals received from channel are down-converted, filtered, sampled and digitised. An FFT block converts these samples back into the frequency domain. The parallel streams from the FFT are then decoded into symbols using symbol detectors and serialized to get back the original data stream. \\
@@ -95,15 +95,16 @@ Based on the profiling and initial discussions with GNU Radio community, followi
 \section{Deliverables}
 The following is a list of the deliverables which may be subject to change following discussions with mentors. 
 \begin{itemize}
-\item Deliverable 1: Provide AVX and AVX2 support for existing VOLK kernels as outlined in Section~\ref{sec:old-kernels}.
-\item Deliverable 2: Port Turbo and Viterbi encoder/decoder for LTE/802.11 from OpenAirInterfaces to VOLK and upgrade them to AVX2.
-\item Deliverable 3: Develop new VOLK kernels for OFDM frame detection, OFDM equalizer, Viterbi encoder/decoder, data interleaver/deinterleaver (if time permits).
-\item Deliverable 4: Vectorize functions like exp, log10, atan2f.
+\item Deliverable 1: Upgrade existing VOLK kernels as outlined in Section~\ref{sec:old-kernels} to have AVX/AVX2 proto-kernels.
+\item Deliverable 2: Port Turbo and Viterbi encoder/decoder for LTE/802.11 from OpenAirInterfaces to VOLK. This will comprise writing generic versions of these blocks, creating volk wrappers and also developing proto-kernels for AVX/AVX2. This will potentially yield Viterbi and Turbo FEC volk kernels that may be re-used by other applications.  
+\item Deliverable 3: Develop new VOLK kernels for OFDM frame detection, OFDM equalizer. In addition to performance, high reconfigurability and portability to other applications such as WLAN, DVB-T, DAB etc will be key concerns.  
+\item Deliverable 4: Vectorize functions like exp, log, atan2, sin, cos.  
+\item Deliverable 5: (Variable) If time permits, target additional operations such as data interleaving, resampling, filtering, PSK sync. Potential operations to be accelerated will be identified before GSoC begins. Their implementation will be done within GSoC period if time permits, or after program completion as part of continuing association with the community.
 \end{itemize}
 
 \section{Hardware required}
 
-A core Haswell processor from Intel will be required for developing kernels with AVX2 support. Also, a USRP board might be needed for testing real-time capabilities of applications like ATSC and DVB-T. 
+A Haswell processor from Intel will be required for developing kernels with AVX2 support. Also, a USRP board might be needed for testing real-time capabilities of applications like ATSC and DVB-T. 
 
 \section{Schedule/Availability}
 A tentative schedule for the project is as follows: 
@@ -124,12 +125,12 @@ A tentative schedule for the project is as follows:
 \centering
 \begin{tabular}{>{\bfseries}p{3.8cm} p{10.2cm}}
 \hline
-Pre GSoC phase & Get familiar with AVX/AVX2, programming with SIMD intrinsics, brush up channel coding techniques. \\ 
-19 May - 23 May \par \textnormal{(1 week)} & Detailed profiling studies, discussions with mentor on design of new kernels. \\
+Pre GSoC phase & Get familiar with AVX/AVX2, programming with SIMD intrinsics, detailed profiling to identify performance bottlenecks. \\ 
+19 May - 23 May \par \textnormal{(1 week)} & Discussions with mentor/community on design of new kernels. \\
 26 May - 6 June \par \textnormal{(2 weeks)} & Upgrade VOLK kernels from Section~\ref{sec:old-kernels} to AVX/AVX2. \\
 9 June - 20 June \par \textnormal{(2 weeks)} & Code OFDM Frame detection kernel. \\ 
 23 June - 27 June \par \textnormal{(1 week)} & Mid-term evaluations, add documentation, testing, benchmarking. \\ 
-30 June - 11 July \par \textnormal{(2 weeks)} & Port OpenAirInterfaces blocks to VOLK and upgrade to AVX2. \\ 
+30 June - 11 July \par \textnormal{(2 weeks)} & Port OpenAirInterfaces channel coding blocks to VOLK and upgrade to AVX/AVX2. \\ 
 14 July - 18 July \par \textnormal{(1 week)} & Functional tests, benchmarking, documentation. \\ 
 21 July - 1 Aug \par \textnormal{(2 weeks)} & Code OFDM frame equalizer kernel. \\ 
 4 Aug - 8 Aug \par \textnormal{(1 week)} & Vectorize exp, log, trig functions. \\ 
@@ -142,12 +143,12 @@ My availability is as follows:
 
 \begin{itemize}
 \item \textbf{Expected hrs/week}: 40 hours per week
-\item \textbf{Off period}: 5-10 blackout days, not contiguous. Lost time will be compensated appropriately.
+\item \textbf{Off period}: Approx. 5 blackout days, not contiguous. Lost time will be compensated appropriately.
 \item \textbf{Other commitments}: Possibly one online course (not finalized yet), with 10-15 hrs/week requirement.
 \end{itemize}
 
 \section{Background}
-I finished my B.Tech in Electrical Engineering from IIT Bombay, India in 2013 and spent the following period working as a research assistant at Carnegie Mellon University, USA. A paper based on my work was accepted for publication at ISCA 2014 (International Symposium on Computer Architecture). I am currently working as a research staff at IIT Bombay. I will join a Masters program in Computer Science in August 2014 (school yet to be finalized). My primary research interest is Computer Architecture and I have undergraduate level experience in Signal Processing (courses on Signal/Systems, Communication Systems and Digital Communications). I have significant experience coding in C++ and written some code in Python. You may find some code that I have written previously, on my github: \url{https://github.com/abhowmick22}. You may find information about my research and my CV at my personal website: \url{https://sites.google.com/site/abhowmick22}.  
+I finished my B.Tech in Electrical Engineering from IIT Bombay, India in 2013 and spent the following period working as a research assistant at Carnegie Mellon University, USA. A paper based on my work was accepted for publication at ISCA 2014 (International Symposium on Computer Architecture). I am currently working as a research staff at IIT Bombay. I will join a Masters program in Computer Science in August 2014 (school yet to be finalized). My primary research interest is Computer Architecture and I have undergraduate level experience in Signal Processing (courses on Signal/Systems, Communication Systems and Digital Communications). I have significant experience coding in C++ and written some code in Python. I also have some experience in x86 assembly and hence would be comfortable with any ASM programming that might be required. You may find some code that I have written previously, on my github: \url{https://github.com/abhowmick22}. You may find information about my research and my CV at my personal website: \url{https://sites.google.com/site/abhowmick22}.  
 
 \subsection{Why GSoC?}
 
@@ -159,12 +160,11 @@ Working with GNU Radio allows me to leverage my electrical engineering backgroun
 
 \subsection{What after GSoC?}
 
-Post GSoC, I wish to continue developing more kernels for the VOLK library. I already have some experience with GPU programming, and continuing the work on VOLK will give me significant experience with SIMD programming - such a skill set aligns perfectly with my interest in parallel computing. I am also interested in going beyond vectorization to develop signal processing blocks, however I didn't include it in my proposal keeping in mind the time constraints. As I will be pursuing a Masters degree, I will talk with mentors to work out a realistic plan for continuing my association.
+Post GSoC, I wish to continue developing more kernels for the VOLK library - finishing off the kernels that were identified but not completed within the timeline of GSoC. I already have some experience with GPU programming, and continuing the work on VOLK will give me significant experience with SIMD programming - such a skill set aligns perfectly with my interest in parallel computing. I am also interested in going beyond vectorization to develop signal processing blocks, however I didn't include it in my proposal keeping in mind the time constraints. As I will be pursuing a Masters degree, I will talk with mentors to work out a realistic plan for continuing my association.
  
 \section{Conclusion}
-I would like to acknowledge Nathan West, Martin Braun, Tom Rondeau, Bogdan Diaconescu and the entire community for helping me get started with GNU Radio and advising me on the proposal. 
+I would like to acknowledge Nathan West, Martin Braun, Tom Rondeau, Bogdan Diaconescu and the entire community for helping me get started with GNU Radio and advising me on the proposal. I sincerely hope that I get to be a part of the GNU Radio community, either through GSoC or otherwise. 
 
-\newpage
 \bibliography{ref.bib}
 
 \end{document}
