Corrected Operf reference

--- a/ref.bib
+++ b/ref.bib
@@ -19,8 +19,8 @@ howpublished = "\url{http://www.3gpp.org/technologies/keywords-acronyms/98-lte}"
 }
 
 @misc{oprofile,
-title = {OProfile, a system-wide profiler for Linux Systems},
-howpublished = "\url{http://oprofile.sourceforge.net/about}",
+title = {Single application profiling with OPerf},
+howpublished = "\url{http://oprofile.sourceforge.net/doc/overview.html}",
 }
 
 @misc{openair,
